--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,11 +23,11 @@
 
 html {
   scroll-behavior: smooth;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 body {
-overflow-x: hidden;
+overflow-x: clip;
 }
   
 .welcomeToMain {
